completed assignment 3 and 4

--- a/src/a3_task3_adriane_mcdonald.Rmd
+++ b/src/a3_task3_adriane_mcdonald.Rmd
@@ -4,6 +4,9 @@ author: "Adriane McDonald"
 date: "11/3/2020"
 output: html_document
 ---
+# TASK 3: Santa Barbara Urchins 
+
+**Data:** [here](https://portal.edirepository.org/nis/mapbrowse?packageid=knb-lter-sbc.26.20)
 
 ```{r setup, include=FALSE, warnings = FALSE}
 knitr::opts_chunk$set(echo = TRUE)
